--- a/style.css
+++ b/style.css
@@ -150,47 +150,137 @@ Use it to make something cool, have fun, and share what you've learned with othe
   padding-inline: 0;
 }
 
-ol, ul, dl {
+ol {
   padding-inline-start: revert;
 }
 
-.pp-footer-blocks ol, ul, dl {
+.pp-footer-blocks ol {
   padding-inline-start: 2.25ch;
 }
 @media screen and (min-color-index: 0) and (-webkit-min-device-pixel-ratio: 0) {
-  .pp-footer-blocks ol, ul, dl {
+  .pp-footer-blocks ol {
     padding-inline-start: 2ch;
   }
 }
 @supports (-ms-ime-align: auto) {
-  .pp-footer-blocks ol, ul, dl {
+  .pp-footer-blocks ol {
     padding-inline-start: 2.25ch;
   }
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
-  .pp-footer-blocks ol, ul, dl {
+  .pp-footer-blocks ol {
     padding-inline-start: 2.25ch;
   }
 }
 @media not all and (min-resolution: 0.001dpcm) {
   @supports (-webkit-appearance: none) and (not (stroke-color: transparent)) {
-    .pp-footer-blocks ol, ul, dl {
+    .pp-footer-blocks ol {
       padding-inline-start: 2ch;
     }
   }
   @supports (-webkit-appearance: none) and (stroke-color: transparent) {
-    .pp-footer-blocks ol, ul, dl {
+    .pp-footer-blocks ol {
       padding-inline-start: 2.125ch;
     }
   }
 }
 @-moz-document url-prefix() {
-  .pp-footer-blocks ol, ul, dl {
+  .pp-footer-blocks ol {
     padding-inline-start: 1.5ch;
   }
 }
 @supports (-moz-appearance: none) {
-  .pp-footer-blocks ol, ul, dl {
+  .pp-footer-blocks ol {
+    padding-inline-start: 1.5ch;
+  }
+}
+
+ul {
+  padding-inline-start: revert;
+}
+
+.pp-footer-blocks ul {
+  padding-inline-start: 2.25ch;
+}
+@media screen and (min-color-index: 0) and (-webkit-min-device-pixel-ratio: 0) {
+  .pp-footer-blocks ul {
+    padding-inline-start: 2ch;
+  }
+}
+@supports (-ms-ime-align: auto) {
+  .pp-footer-blocks ul {
+    padding-inline-start: 2.25ch;
+  }
+}
+@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+  .pp-footer-blocks ul {
+    padding-inline-start: 2.25ch;
+  }
+}
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) and (not (stroke-color: transparent)) {
+    .pp-footer-blocks ul {
+      padding-inline-start: 2ch;
+    }
+  }
+  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
+    .pp-footer-blocks ul {
+      padding-inline-start: 2.125ch;
+    }
+  }
+}
+@-moz-document url-prefix() {
+  .pp-footer-blocks ul {
+    padding-inline-start: 1.5ch;
+  }
+}
+@supports (-moz-appearance: none) {
+  .pp-footer-blocks ul {
+    padding-inline-start: 1.5ch;
+  }
+}
+
+dl {
+  padding-inline-start: revert;
+}
+
+.pp-footer-blocks dl {
+  padding-inline-start: 2.25ch;
+}
+@media screen and (min-color-index: 0) and (-webkit-min-device-pixel-ratio: 0) {
+  .pp-footer-blocks dl {
+    padding-inline-start: 2ch;
+  }
+}
+@supports (-ms-ime-align: auto) {
+  .pp-footer-blocks dl {
+    padding-inline-start: 2.25ch;
+  }
+}
+@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+  .pp-footer-blocks dl {
+    padding-inline-start: 2.25ch;
+  }
+}
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) and (not (stroke-color: transparent)) {
+    .pp-footer-blocks dl {
+      padding-inline-start: 2ch;
+    }
+  }
+  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
+    .pp-footer-blocks dl {
+      padding-inline-start: 2.125ch;
+    }
+  }
+}
+@-moz-document url-prefix() {
+  .pp-footer-blocks dl {
+    padding-inline-start: 1.5ch;
+  }
+}
+@supports (-moz-appearance: none) {
+  .pp-footer-blocks dl {
     padding-inline-start: 1.5ch;
   }
 }
